<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/dialog_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblRandomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblTitle"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/dialog_random_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llLinkWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblRandomText"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/lbl_agreement"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/btnPrivacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/lbl_agreement"
            android:textColor="@color/blue" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/chkAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLinkWrapper"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:buttonTint="@android:color/black"
        android:text="@string/chk_agree"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_no" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:text="@string/btn_yes"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>